--- a/ikea-tow/resources/velocity/productDetail.vm
+++ b/ikea-tow/resources/velocity/productDetail.vm
@@ -46,7 +46,7 @@
 			</div>
 		<div style='width:260.0px;height:280px;overflow:hidden;float:left;display:inline;margin:0px 30.0px 0px 30.0px;'>
 		<div style='width:200.0px;height:200.0px;overflow:hidden;float:right;margin-right:35px;display:inline;'>
-					<img src='http://www.ikea.com/PIAimages/${pic_id.get(0)}_S3.jpg' height="200" width="200"style='vertical-align:top;' />	</div>			
+					<img src='http://www.ikea.com/PIAimages/${pic_ids.get(0)}_S3.jpg' height="200" width="200"style='vertical-align:top;' />	</div>			
 			<img src='http://img01.taobaocdn.com/imgextra/i1/42635718/T2tv2FXoBXXXXXXXXX_!!42635718.gif' style='float:right;display:inline;margin-top:-200.0px;' />			
 			<img src='http://img01.taobaocdn.com/imgextra/i1/42635718/T2PQ_DXeVaXXXXXXXX_!!42635718.gif' style='float:right;display:inline;margin-top:-76.0px;margin-right:25px'/>
 			<div style='width:250.0px;float:right;display:inline;margin-top:-70.0px;margin-right:0px;font-size:12.0px;color:white;text-align:left;'>
@@ -127,15 +127,15 @@ ${custMaterials}
 						</tr>
 						<tr>
 							<td style='width:120.0px;margin-left:10.0px;float:left;color:$typecolorlist.get($i);text-align:center;border-style:solid;border-color:$typecolorlist.get($i);border-width:1.0px;font-size:14.0px;'>
-								$productType($i) </td>
+								$productType.get($i) </td>
 							<td style='padding:3.0px;width:160.0px;border-bottom-style:dashed;border-color:$typecolorlist.get($i);font-size:15.0px;border-width:1.0px;'>
-								货号:$productId($i)</td>
+								货号:$productIds.get($i)</td>
 						</tr>
 						<tr>
 							<td style='font-size:18.0px;width:120.0px;margin-left:10.0px;background:$typecolorlist.get($i);color:white;text-align:center;float:left;border-style:solid;border-color:$typecolorlist.get($i);border-width:1.0px;'>
 								Color</td>
 								<td style='padding:3.0px;width:160.0px;border-bottom-style:dashed;border-color:$typecolorlist.get($i);font-size:15.0px;border-width:1.0px;'>
-								￥ $price($i)</td>
+								￥ $price.get($i)</td>
 						</tr>
 						<tr>
 							<td colspan='2'>
@@ -165,15 +165,15 @@ ${custMaterials}
 						</tr>
 						<tr>
 							<td style='width:120.0px;margin-left:10.0px;float:left;color:$typecolorlist[$i];text-align:center;border-style:solid;border-color:$typecolorlist.get($i);border-width:1.0px;font-size:14.0px;'>
-								$productType($i)</td>
+								$productType.get($i)</td>
 							<td style='padding:3.0px;width:160.0px;border-bottom-style:dashed;border-color:$typecolorlist.get($i);font-size:15.0px;border-width:1.0px;'>
-								货号:$productId($i)</td>
+								货号:$productIds.get($i)</td>
 						</tr>
 						<tr>
 							<td style='font-size:18.0px;width:120.0px;margin-left:10.0px;background:$typecolorlist.get($i);color:white;text-align:center;float:left;border-style:solid;border-color:$typecolorlist.get($i);border-width:1.0px;'>
 								Color</td>
 							<td style='padding:3.0px;width:160.0px;border-bottom-style:dashed;border-color:$typecolorlist.get($i);font-size:15.0px;border-width:1.0px;'>
-								￥$price($i)</td>
+								￥$price.get($i)</td>
 						</tr>
 						</tr>
 						
@@ -201,7 +201,7 @@ ${custMaterials}
 					细节大图</div>
 			</div>
 
-#foreach( $picBig in $pic_id)
+#foreach( $picBig in $pic_ids)
 #if($velocityCount%2==1)
 			<div style="width:540.0px;height:530px;overflow:hidden;float:left;display:inline;margin:10px 20.0px 0px 10.0px;">
 				<div style="width:500.0px;height:500.0px;overflow:hidden;float:right;margin-right:20.0px;display:inline;min-width:50.0px;min-height:50.0px;">
